force-app/main/default/objects/New_Property__c/New_Property__c.object-meta.xml
<CustomObject>
    <label>New_物件</label>
    <nameField>
        <label>現場名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>