force-app/main/default/objects/New_Property__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <formula>Account_Name__r.Id</formula>
    <label>取引先ID</label>
    <type>Text</type>
</CustomField>