force-app/main/default/objects/New_Property__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GC名</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>New_物件</relationshipLabel>
    <relationshipName>New</relationshipName>
    <type>Lookup</type>
</CustomField>