force-app/main/default/objects/New_Property__c/fields/Building_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Building_Purpose__c</fullName>
    <label>用途</label>
    <length>255</length>
    <type>Text</type>
</CustomField>