force-app/main/default/objects/New_Property__c/fields/Building_Structure__c.field-meta.xml
<CustomField>
    <fullName>Building_Structure__c</fullName>
    <label>構造</label>
    <length>255</length>
    <type>Text</type>
</CustomField>