force-app/main/default/objects/New_Property__c/fields/Construction_Type__c.field-meta.xml
<CustomField>
    <fullName>Construction_Type__c</fullName>
    <label>工事種別</label>
    <length>255</length>
    <type>Text</type>
</CustomField>