force-app/main/default/objects/New_Property__c/fields/Design_Office_ID__c.field-meta.xml
<CustomField>
    <fullName>Design_Office_ID__c</fullName>
    <formula>Design_Office_Name__r.Id</formula>
    <label>設計事務所ID</label>
    <type>Text</type>
</CustomField>