force-app/main/default/objects/New_Property__c/fields/Design_Office_Name__c.field-meta.xml
<CustomField>
    <fullName>Design_Office_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>設計事務所名</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>New_物件 (設計事務所名)</relationshipLabel>
    <relationshipName>New1</relationshipName>
    <type>Lookup</type>
</CustomField>