force-app/main/default/objects/New_Property__c/fields/Floors__c.field-meta.xml
<CustomField>
    <fullName>Floors__c</fullName>
    <label>階数</label>
    <length>255</length>
    <type>Text</type>
</CustomField>