force-app/main/default/objects/New_Property__c/fields/GC_Progress_Status_ST__c.field-meta.xml
<CustomField>
    <fullName>GC_Progress_Status_ST__c</fullName>
    <label>GC攻略ステータス_スチール</label>
    <length>255</length>
    <type>Text</type>
</CustomField>