force-app/main/default/objects/New_Property__c/fields/Merged_FLG__c.field-meta.xml
<CustomField>
    <fullName>Merged_FLG__c</fullName>
    <label>集約済フラグ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>