force-app/main/default/objects/New_Property__c/fields/NewRegistry_FLG__c.field-meta.xml
<CustomField>
    <fullName>NewRegistry_FLG__c</fullName>
    <label>新着フラグ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>