force-app/main/default/objects/New_Property__c/fields/Overall_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Overall_Start_Date__c</fullName>
    <label>全体工期_着工日</label>
    <length>255</length>
    <type>Text</type>
</CustomField>