force-app/main/default/objects/New_Property__c/fields/Prefecture__c.field-meta.xml
<CustomField>
    <fullName>Prefecture__c</fullName>
    <label>都道府県</label>
    <length>255</length>
    <type>Text</type>
</CustomField>