force-app/main/default/objects/New_Property__c/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <label>建物名（マンション名、ビル名など）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>