force-app/main/default/objects/New_Property__c/fields/Property_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Property_Unique_ID__c</fullName>
    <label>物件_unique_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>