force-app/main/default/objects/New_Property__c/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <label>情報登録日</label>
    <type>Date</type>
</CustomField>