force-app/main/default/objects/New_Property__c/fields/Site_Area__c.field-meta.xml
<CustomField>
    <fullName>Site_Area__c</fullName>
    <label>敷地面積</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>