force-app/main/default/objects/New_Property__c/fields/Site_Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_Manager_ID__c</fullName>
    <formula>Site_Manager_Name__r.Id</formula>
    <label>現場所長ID</label>
    <type>Text</type>
</CustomField>