force-app/main/default/objects/New_Property__c/fields/Site_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Manager_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>現場所長名</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>New_物件</relationshipLabel>
    <relationshipName>New</relationshipName>
    <type>Lookup</type>
</CustomField>