force-app/main/default/objects/New_Property__c/fields/Successful_Bid_Amount_GC__c.field-meta.xml
<CustomField>
    <fullName>Successful_Bid_Amount_GC__c</fullName>
    <label>GC落札額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>