force-app/main/default/objects/New_Property__c/fields/Supplementary_Info__c.field-meta.xml
<CustomField>
    <fullName>Supplementary_Info__c</fullName>
    <label>所長攻略向け補足情報</label>
    <length>255</length>
    <type>Text</type>
</CustomField>