force-app/main/default/objects/New_Property__c/fields/Total_Floor_Area__c.field-meta.xml
<CustomField>
    <fullName>Total_Floor_Area__c</fullName>
    <label>延床面積</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>