force-app/main/default/objects/New_Property__c/fields/Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Update_Date__c</fullName>
    <label>情報更新日</label>
    <type>Date</type>
</CustomField>