force-app/main/default/objects/New_Property__c/fields/Update_FLG__c.field-meta.xml
<CustomField>
    <fullName>Update_FLG__c</fullName>
    <label>更新フラグ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>