force-app/main/default/objects/New_Property__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Total_Floor_Area__c</columns>
    <columns>Prefecture__c</columns>
    <columns>Address1__c</columns>
    <columns>Overall_Start_Date__c</columns>
    <columns>Construction_Type__c</columns>
    <columns>Floors__c</columns>
    <columns>Building_Structure__c</columns>
    <columns>Building_Purpose__c</columns>
    <columns>Site_Manager_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Name__c</field>
        <operation>contains</operation>
        <value>竹中工務店</value>
    </filters>
    <label>すべて選択</label>
</ListView>